Changed timer to a class
Updated timer to a class, so that we can make many timers at the same time.

--- a/display_records.html
+++ b/display_records.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="timer.html">Timer</a>
-    <a href="display_records.html">Timer Records</a>
+    <a href="timer.html">Timer</a>
+    <a class="active" href="display_records.html">Timer Records</a>
     <a href="#contact">Contact</a>
   <div class="table">
     <table>
