--- a/new_timer.html
+++ b/new_timer.html
@@ -5,9 +5,9 @@
   <title>Weekly Coding Timer</title>
 </head>
 <body>
-  <sctipt src='.js/index.js'></sctipt>
+  <script src='./js/timer.js'></script>
   <div id = 'container'>
-    20:00:00
+    <p>Is this a button?</p>
   </div>
 </body>
 </html>
