--- a/timer.html
+++ b/timer.html
@@ -9,27 +9,22 @@
     <a class="active" href="timer.html">Timer</a>
     <a href="display_records.html">Timer Records</a>
     <a href="#contact">Contact</a>
+    <a onclick="newTimer()">New Timer</a>
   </div>
   <div class = "clocks">
-    <div class = "clock-container">
-      <h2 class = "timer-title">Timer Name</h2>
-        <div class = "clock" id = "codingTimer"></div>
-      <div class="controls">
-        <button onclick="codingTimer.startTimer()">Start Timer</button>
-        <button onclick="codingTimer.stopTimer()">Stop Timer</button>
-        <button onclick="codingTimer.resetTimer()">Reset Timer</button>
-      </div>
+  </div>
+  <div class = "notes">
+    <div class = "note" id = "todo">
+      <h2 class = "note-title">Note</h2>
+      <form>
+        <input type="text-box" id="newListItem">
+        <button>Add</button>
+      </form>
+      <ul id = 'todolist'>
+
+      </ul>
     </div>
   </div>
 </body>
 <script src="./js/timer.js"></script>
 </html>
-
-<div>
-  <div>
-    clock
-  </div>
-  <div>
-    buttons
-  </div>
-</div>
